--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,8 @@ PyJWT==1.7.1
 pytz==2022.1
 sqlparse==0.4.2
 Pillow==9.2.0
+dj-database-url==1.0.0
+django-shortcuts==1.6
+gunicorn==20.1.0
+psycopg2-binary==2.9.5
+tzdata==2022.6
